Bug 183250 - Crash managing external devices (mp3 players)
Summary: Crash managing external devices (mp3 players)
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (show other bugs)
Version: 2.0.1
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Amarok Developers
URL:
Keywords:
: 183249 211287 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-02-05 02:06 UTC by Germano Massullo
Modified: 2009-10-21 08:00 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Germano Massullo 2009-02-05 02:06:33 UTC
Version:            (using KDE 4.1.3)
OS:                Linux
Installed from:    Ubuntu Packages

Applicazione: Amarok (amarok), segnale SIGSEGV
[Thread debugging using libthread_db enabled]
[New Thread 0xb3a6f6e0 (LWP 7323)]
[New Thread 0x999feb90 (LWP 10320)]
[New Thread 0x9a1ffb90 (LWP 10319)]
[New Thread 0x9ad7db90 (LWP 9169)]
[New Thread 0x9b57eb90 (LWP 9168)]
[New Thread 0x9c9ffb90 (LWP 7663)]
[New Thread 0x9de10b90 (LWP 7662)]
[New Thread 0x9d5abb90 (LWP 7437)]
[New Thread 0x9e65cb90 (LWP 7347)]
[New Thread 0x9ee5db90 (LWP 7346)]
[New Thread 0x9f82bb90 (LWP 7345)]
[New Thread 0xa0415b90 (LWP 7344)]
[New Thread 0xab0f7b90 (LWP 7337)]
[New Thread 0xac44bb90 (LWP 7335)]
[New Thread 0xacc4cb90 (LWP 7334)]
[New Thread 0xad44db90 (LWP 7333)]
[New Thread 0xaecbbb90 (LWP 7331)]
[New Thread 0xafccbb90 (LWP 7329)]
[New Thread 0xb04ccb90 (LWP 7328)]
[New Thread 0xb0d0fb90 (LWP 7327)]
[New Thread 0xb1583b90 (LWP 7324)]
[KCrash handler]
#6  0xb72ed2a8 in QAction::text () from /usr/lib/libQtGui.so.4
#7  0xb6b8c5fb in CollectionTreeView::createExtendedActions (this=0x8dc1c30, 
    indices=@0xbfd35928)
    at /build/buildd/amarok-kde4-2.0.1.1/src/browsers/collectionbrowser/CollectionTreeView.cpp:677
#8  0xb6b8e018 in CollectionTreeView::contextMenuEvent (this=0x8dc1c30, 
    event=0xbfd361a0)
    at /build/buildd/amarok-kde4-2.0.1.1/src/browsers/collectionbrowser/CollectionTreeView.cpp:184
#9  0xb7347c6d in QWidget::event () from /usr/lib/libQtGui.so.4
#10 0xb767efd3 in QFrame::event () from /usr/lib/libQtGui.so.4
#11 0xb77157df in QAbstractScrollArea::viewportEvent ()
   from /usr/lib/libQtGui.so.4
#12 0xb77c0ccf in QAbstractItemView::viewportEvent ()
   from /usr/lib/libQtGui.so.4
#13 0xb77f89e4 in QTreeView::viewportEvent () from /usr/lib/libQtGui.so.4
#14 0xb7717d85 in ?? () from /usr/lib/libQtGui.so.4
#15 0xb7e1804a in QCoreApplicationPrivate::sendThroughObjectEventFilters ()
   from /usr/lib/libQtCore.so.4
#16 0xb72ef8ca in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#17 0xb72f7c55 in QApplication::notify () from /usr/lib/libQtGui.so.4
#18 0xb7017b2d in KApplication::notify (this=0xbfd36a24, receiver=0x8dc1368, 
    event=0xbfd361a0)
    at /build/buildd/kde4libs-4.1.3/kdeui/kernel/kapplication.cpp:311
#19 0xb7e18e61 in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#20 0xb72fa86e in QCoreApplication::sendSpontaneousEvent ()
   from /usr/lib/libQtGui.so.4
#21 0xb7361e3f in ?? () from /usr/lib/libQtGui.so.4
#22 0xb73609e5 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#23 0xb738a7aa in ?? () from /usr/lib/libQtGui.so.4
#24 0xb68a36f8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#25 0xb68a6da3 in ?? () from /usr/lib/libglib-2.0.so.0
#26 0xb68a6f61 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#27 0xb7e43478 in QEventDispatcherGlib::processEvents ()
   from /usr/lib/libQtCore.so.4
#28 0xb7389ea5 in ?? () from /usr/lib/libQtGui.so.4
#29 0xb7e1752a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#30 0xb7e176ea in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#31 0xb7e19da5 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#32 0xb72ef767 in QApplication::exec () from /usr/lib/libQtGui.so.4
#33 0x0804c042 in main (argc=1, argv=0xbfd36f24)
    at /build/buildd/amarok-kde4-2.0.1.1/src/main.cpp:130
#0  0xb7f35430 in __kernel_vsyscall ()
Comment 1 Mark Kretschmann 2009-02-05 08:27:56 UTC
This crash appears to be in the collection code, but I'm CC'ing our media devices expert Alejandro anyway.
Comment 2 Alejandro Wainzinger 2009-02-05 08:32:14 UTC
All I see is that it crashes creating extended actions, of which there are many.  It would be useful to get a step-by-step description of reproduction of the bug.

Also, run with `amarok -d` and show the debug output near the crash.
Comment 3 Germano Massullo 2009-02-05 10:32:06 UTC
I was browsing the collection of the creative zen vision M and suddendly amarok crashed. Next time I will run amarok -d as you suggested me
Comment 4 Mark Kretschmann 2009-02-05 11:51:46 UTC
SVN commit 921619 by markey:

Fix potential crash in CollectionTreeView's action handling code
(dereferencing 0-pointer).

BUG: 183250

 M  +5 -2      CollectionTreeView.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=921619
Comment 5 Kevin Funk 2009-02-05 12:01:26 UTC
*** Bug 183249 has been marked as a duplicate of this bug. ***
Comment 6 Mark Kretschmann 2009-10-21 08:00:24 UTC
*** Bug 211287 has been marked as a duplicate of this bug. ***