Fix potential crash in CollectionTreeView's action handling code (dereferencing 0-pointer).

Backport of 921619

BUG: 183250

svn path=/branches/stable/extragear-kde4/multimedia/amarok/; revision=926075